@@ -8,6 +8,7 @@ ddetect (0.105) UNRELEASED; urgency=low
     - Load yenta_socket a bit later, after the discover run, because it
       looked strange to load a module before it said it was detecting
       hardware. It still loads before any other modules.
+    - Add progress display when loading modules for firewire CD.
 
  -- Joshua Kwan <joshk@triplehelix.org>  Sun,  4 Jul 2004 14:01:20 -0700
 
